@@ -40,4 +40,4 @@ version.h: VERSION
 	echo "/* this file is autogenerated */" > version.h
 	echo "#define VERSION \"`cat VERSION`\"" >> version.h
 
-.PHONY: clean distclean dep all build.o install
+.PHONY: clean distclean dep all build.o install uninstall
